fix overlapping

--- a/resources/css/email/sidebar.scss
+++ b/resources/css/email/sidebar.scss
@@ -96,7 +96,7 @@
         .profile-selector {
             position: absolute;
             bottom: 4.5rem;
-            left: 0.5rem;
+            left: 6.5rem;
 
             display: flex;
             flex-direction: column;
@@ -108,6 +108,8 @@
             border-radius: 1rem;
 
             width: 0;
+
+            z-index: 1000;
 
             overflow: hidden;
 
